<resources>
    <string name="app_name">HomeWork2Android2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Имя пользователя</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="password_confirmation">Подтверждения пароля</string>
    <string name="to_come_in">Войти</string>
    <string name="press">Нажать</string>
    <string name="abstract_text">Конспект:</string>
    <string name="hand_over">Передать</string>
</resources>